--- a/style.css
+++ b/style.css
@@ -423,4 +423,47 @@ footer .footer-content .mail .social-logo .logo {
   background-color: white;
   color: rgb(255, 151, 9);
   border-radius: 50%;
+}
+
+.film,
+.film2,
+.film3,
+.film4,
+.film5 {
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.film button,
+.film2 button,
+.film3 button,
+.film4 button,
+.film5 button {
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  position: absolute;
+  top: 300px;
+  right: 400px;
+  border-radius: 10px;
+  color: white;
+  background-color: rgb(255, 151, 9);
+  border: none;
+  font-size: 1.2rem;
+}
+.film iframe,
+.film2 iframe,
+.film3 iframe,
+.film4 iframe,
+.film5 iframe {
+  width: 853px;
+  height: 480px;
+  position: absolute;
+  top: 300px;
+  left: 533px;
 }/*# sourceMappingURL=style.css.map */
