--- a/products.css
+++ b/products.css
@@ -201,21 +201,22 @@ section .product .cards {
   padding: 1rem 0;
 }
 section .product .cards .card {
-  width: 13vw;
-  height: 43vh;
+  width: 15vw;
   display: flex;
   flex-direction: column;
-  padding: 0 0.3rem;
+  padding: 0 0.1rem;
+  margin: 0 0.4rem;
   background-color: rgb(251, 242, 226);
 }
 section .product .cards .card .pic img {
   width: 100%;
-  height: 28vh;
+  height: 24vh;
+  display: block;
   -o-object-fit: cover;
      object-fit: cover;
 }
-section .product .cards .card h4 {
-  font-size: 1.2rem;
+section .product .cards .card p {
+  flex: 1 1 70px;
 }
 section .product .cards .card .price {
   margin-top: auto;
