--- a/products.scss
+++ b/products.scss
@@ -78,22 +78,24 @@ section {
       justify-content: space-between;
       padding: 1rem 0;
       .card {
-        width: 13vw;
-        height: 43vh;
+        width: 15vw;
+
         display: flex;
         flex-direction: column;
-        padding: 0 0.3rem;
+        padding: 0 0.1rem;
+        margin: 0 0.4rem;
         background-color: $thirdColor;
         .pic {
           img {
             width: 100%;
-            height: 28vh;
+            height: 24vh;
+            display: block;
             object-fit: cover;
           }
         }
 
-        h4 {
-          font-size: 1.2rem;
+        p {
+          flex: 1 1 70px;
         }
 
         .price {
